--- a/views/base.twig
+++ b/views/base.twig
@@ -5,7 +5,7 @@
     <title>Everything about Fırat Batuhan İçöz</title>
 
     <!-- Le styles -->
-    <link href="http://assets.batu.me/labs/css/bootstrap-1.0.0.css" rel="stylesheet">
+    <link href="assets/css/bootstrap-1.1.0.css" rel="stylesheet">
     <link href="http://assets.batu.me/labs/css/docs.css" rel="stylesheet">
     <link href="http://assets.batu.me/labs/js/google-code-prettify/prettify.css" rel="stylesheet">
 
@@ -35,13 +35,15 @@
           <p class="lead">
           is a 17-year-old human like creature who can code. <br />
           </p>
-          <p>He is also an <strong>teen entrepreneur</strong> and a <strong>  Almost all of Batuhan's Projects are open source, click <a href="https://github.com/batuhanicoz">here</a> for his GitHub account!
-            <br />
+          <p>He is also a <strong>teen entrepreneur</strong> and a <strong>high school junior</strong>.
+          </p>
+          <p>
             <a href="http://twitter.com/batuhanicoz" class="twitter-follow-button" data-show-count="false" data-width="150px" data-link-color="#ffffff" data-text-color="#ffffff">Follow @batuhanicoz</a>
           </p>
         </div> <!-- /container -->
       </div>
     </div>
+
     <div class="container">
 
 
@@ -56,10 +58,7 @@
           <p class="right">(c) <a href="http://batu.me/1">batuhanicoz</a>
           </p>
           <p>
-            Powered by SensioLabs' <a href="http://silex-project.org/">Silex</a> and Twitter's <a href="https://github.com/twitter/bootstrap">Bootstrap</a>.
-            <br />
-            This tool is alive thanks to <a href="https://plus.google.com/u/0/107623790744375289729/posts">Şirzat Aytaç</a>, <a href="http://rss-ems.com/">Rıza Selçuk Saydam</a> and supporters of <a href="http://gplus.to">GPlus.to</a>.
-          </p>
+            Last updated: XXX</p>
         </div>
       </div>
     </div>
