--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -1,47 +1,61 @@
-<!doctype html>
-<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
-<!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
-<!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
-<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Firat Batuhan Icoz</title>
+    <meta name="description" content="a shortcut to everything Batuhan">
+    <meta name="author" content="Batuhan Icoz">
 
-  <title>Your daily journal | built with SILEX</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Le styles -->
+    <link href="assets/css/bootstrap-1.1.1.css" rel="stylesheet">
+    <link href="assets/css/docs.css" rel="stylesheet">
+    <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
 
-  <link rel="shortcut icon" href="/web/favicon.ico">
-  <link rel="apple-touch-icon" href="/web/apple-touch-icon.png">
-  <link rel="stylesheet" href="/web/css/style.css?v=2">
+    <!-- Le fav and touch icons -->
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+  </head>
 
-  <script src="/web/js/libs/modernizr-1.7.min.js"></script>
-</head>
-<body>
-	<div id="container">
-		<header>
-      {% block header %}{% endblock %}
-		</header>
+  <body>
 
-		<div id="main" role="main">
+    <!-- Topbar
+    ================================================== -->
+    <div class="topbar">
+      <div class="fill">
+        <div class="container">
+          <h3><a href="http://batu.me/1">Batuhan's</a></h3>
+          <ul>
+            <li class="active"><a href="#masthead">Homepage</a></li>
+            <li><a href="http://batu.me/about">About</a></li>
+            <li><a href="http://changelog.batu.me">Changelog</a></li>
+            <li><a href="http://blog.batu.me">Blog</a></li>
+            <li><a href="http://batu.me/projects">Projects</a></li>
+            <li><a href="http://shareables.me">Shareables</a></li>
+            <li><a href="http://batu.me/contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    
       {% block content %}{% endblock %}
-		</div>
-
-		<footer>
-      {% block footer %}{% endblock %}
-		</footer>
-	</div>
-
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-	<script>!window.jQuery && document.write(unescape('%3Cscript src="/web/js/libs/jquery-1.5.1.min.js"%3E%3C/script%3E'))</script>
-	<script src="/web/js/plugins.js"></script>
-	<script src="/web/js/script.js"></script>
-	<!--[if lt IE 7 ]>
-	<script src="/web/js/libs/dd_belatedpng.js"></script>
-	<script> DD_belatedPNG.fix('img, .png_bg');</script>
-	<![endif]-->
-</body>
+      
+    <div class="container">
+    	<footer>
+        	<p>&copy; 2011 Firat Batuhan Icoz</p>
+      	</footer>
+    </div>
+    
+    <!-- Le javascript -->
+    <script src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
+    <!-- script src="http://autobahn.tablesorter.com/jquery.tablesorter.min.js"></script -->
+    <script src="assets/js/google-code-prettify/prettify.js"></script>
+    <script src="assets/js/application.js"></script>
+  </body>
 </html>
