homepage added + twitter js added to footer

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -57,5 +57,7 @@
     <!-- script src="http://autobahn.tablesorter.com/jquery.tablesorter.min.js"></script -->
     <script src="assets/js/google-code-prettify/prettify.js"></script>
     <script src="assets/js/application.js"></script>
+    <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+    
   </body>
 </html>
