--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -5,28 +5,43 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-        <h1>Hello, world!</h1>
-        <p>Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-        <p><a class="btn primary large">Learn more &raquo;</a></p>
-      </div>
+        <h1>Hi there, I'm Batuhan.</h1>
+        <p>I'm a 17-year-old web developer, 
+        teen entrepreneur and high school junior. </p>
+        <p>
+        
+       	<a href="http://www.facebook.com/batuhanicoz">
+    		<img src="http://batuhanicoz.com/assets/images/icons/facebook-32x32.png" class="small" alt="Facebook" />
+       	</a>
+        <a href="https://github.com/batuhanicoz">
+        	<img src="http://batuhanicoz.com/assets/images/icons/github-32x32.png" class="small" alt="Github" />
+        </a>
+		<a href="http://shareables.me">
+			<img src="http://batuhanicoz.com/assets/images/icons/tumblr-32x32.png" class="small" alt="Tumblr" />
+		</a>
+  		<a href="http://foursquare.com/batuhanicoz">
+  			<img src="http://batuhanicoz.com/assets/images/icons/foursquare-32x32.png" class="small" alt="Foursquare" />
+  		</a>
+		<a href="http://www.linkedin.com/in/batuhanicoz">
+			<img src="http://batuhanicoz.com/assets/images/icons/linkedin-32x32.png" class="small" alt="LinkedIn" />
+		</a>
+		<a href="https://plus.google.com/107704817814341858380">
+			<img src="http://batuhanicoz.com/assets/images/icons/google-plus-32.png" class="small" alt="Google+" />
+		</a>
+		<a href="http://last.fm/user/batuhanicoz">
+			<img src="http://batuhanicoz.com/assets/images/icons/lastfm-32x32.png" class="small" alt="Last.fm" />
+		</a>
+		<a href="http://www.formspring.me/batuhanicoz">
+			<img src="http://batuhanicoz.com/assets/images/icons/formspring-32x32.png" class="small" alt="Formspring" />
+		</a>
+		<a href="http://twitter.com/batuhanicoz" class="twitter-follow-button" data-show-count="false">Follow @batuhanicoz</a>
 
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span6">
-          <h2>Heading</h2>
-          <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span5">
-          <h2>Heading</h2>
-           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span5">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
+		</p>
+		<p>
+			<a class="btn primary large">About me &raquo;</a>
+			<a class="btn primary large">My projects &raquo;</a>
+			<a class="btn primary large">Contact me &raquo;</a>
+		</p>
       </div>
 
     </div> <!-- /container -->
