--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -6,10 +6,9 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
         <h1>Hi there, I'm Batuhan.</h1>
-        <p>I'm a 17-year-old web developer, 
+        <p>I'm a {{ beenalivefor }}-day-old web developer, 
         teen entrepreneur and high school junior. </p>
         <p>
-        
        	<a href="http://www.facebook.com/batuhanicoz">
     		<img src="http://batuhanicoz.com/assets/images/icons/facebook-32x32.png" class="small" alt="Facebook" />
        	</a>
@@ -35,7 +34,6 @@
 			<img src="http://batuhanicoz.com/assets/images/icons/formspring-32x32.png" class="small" alt="Formspring" />
 		</a>
 		<a href="http://twitter.com/batuhanicoz" class="twitter-follow-button" data-show-count="false">Follow @batuhanicoz</a>
-
 		</p>
 		<p>
 			<a class="btn primary large">About me &raquo;</a>
