simple tweaks with the text

--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -5,9 +5,9 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-        <h1>Hi there, I'm Batuhan.</h1>
+        <h1>{{ hellotext }}, I'm Batuhan.</h1>
         <p>I'm a {{ beenalivefor }}-day-old web developer, 
-        teen entrepreneur and high school junior. </p>
+        teen entrepreneur and a student. </p>
         <p>
        	<a href="http://www.facebook.com/batuhanicoz">
     		<img src="http://batuhanicoz.com/assets/images/icons/facebook-32x32.png" class="small" alt="Facebook" />
