--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -3,31 +3,38 @@
 {% block content %}
     <div class="container">
 
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>Hello, world!</h1>
-        <p>Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-        <p><a class="btn primary large">Learn more &raquo;</a></p>
-      </div>
+<!-- About Bootstrap
+================================================== -->
+<section id="about">
+  <div class="page-header">
+    <h1>About Me <small>Who am I, where I was born, how I grew up and so on.</small></h1>
+  </div>
+  <div class="row">
+    <div class="span6 columns">
+      <h3>A brief introduction</h3>
+	  <p>Hello, my name is Fırat Batuhan İçöz and I'm a web developer.</p>
+	  <p>I have (co-)founded few projects/start-up's, most notably Sosyal Radyo.</p>
+	  <p>And I'm also a high school junior who's studying foreign languages.</p>
+	</div>
+    <div class="span5 columns">
+      <p>
+      	<img width=250px src="http://batu.me/wp-content/uploads/2011/01/30194_1461498257498_1234684607_31364564_2550044_n-3.jpg" />
+      </p>
+    </div>
+    <div class="span5 columns">
+      <h3>What's included</h3>
+      <p>Bootstrap comes complete with compiled CSS, uncompiled, and example templates.</p>
+      <ul>
+        <li>All original .less files</li>
+        <li>Fully compiled and minified CSS</li>
+        <li>Complete styleguide documentation</li>
+        <li>Example page template (more to come soon)</li>
+      </ul>
+    </div>
+  </div><!-- /row -->
+</section>
 
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span6">
-          <h2>Heading</h2>
-          <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span5">
-          <h2>Heading</h2>
-           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span5">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-      </div>
+
 
     </div> <!-- /container -->
 
