added locale related stuff

--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -36,7 +36,7 @@
 		<a href="http://twitter.com/batuhanicoz" class="twitter-follow-button" data-show-count="false">Follow @batuhanicoz</a>
 		</p>
 		<p>
-			<a class="btn primary large">About me &raquo;</a>
+			<a class="btn primary large">{{ app.translator.trans('homepage_about_me') }} &raquo;</a>
 			<a class="btn primary large">My projects &raquo;</a>
 			<a class="btn primary large">Contact me &raquo;</a>
 		</p>
