--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -10,28 +10,28 @@
         teen entrepreneur and a student. </p>
         <p>
        	<a href="http://www.facebook.com/batuhanicoz">
-    		<img src="http://batuhanicoz.com/assets/images/icons/facebook-32x32.png" class="small" alt="Facebook" />
+    		<img src="./assets/img/icons/icons/facebook-32x32.png" class="small" alt="Facebook" />
        	</a>
         <a href="https://github.com/batuhanicoz">
-        	<img src="http://batuhanicoz.com/assets/images/icons/github-32x32.png" class="small" alt="Github" />
+        	<img src="./assets/img/icons/icons/github-32x32.png" class="small" alt="Github" />
         </a>
 		<a href="http://shareables.me">
-			<img src="http://batuhanicoz.com/assets/images/icons/tumblr-32x32.png" class="small" alt="Tumblr" />
+			<img src="./assets/img/icons/icons/tumblr-32x32.png" class="small" alt="Tumblr" />
 		</a>
   		<a href="http://foursquare.com/batuhanicoz">
-  			<img src="http://batuhanicoz.com/assets/images/icons/foursquare-32x32.png" class="small" alt="Foursquare" />
+  			<img src="./assets/img/icons/icons/foursquare-32x32.png" class="small" alt="Foursquare" />
   		</a>
 		<a href="http://www.linkedin.com/in/batuhanicoz">
-			<img src="http://batuhanicoz.com/assets/images/icons/linkedin-32x32.png" class="small" alt="LinkedIn" />
+			<img src="./assets/img/icons/icons/linkedin-32x32.png" class="small" alt="LinkedIn" />
 		</a>
 		<a href="https://plus.google.com/107704817814341858380">
-			<img src="http://batuhanicoz.com/assets/images/icons/google-plus-32.png" class="small" alt="Google+" />
+			<img src="./assets/img/icons/icons/google-plus-32.png" class="small" alt="Google+" />
 		</a>
 		<a href="http://last.fm/user/batuhanicoz">
-			<img src="http://batuhanicoz.com/assets/images/icons/lastfm-32x32.png" class="small" alt="Last.fm" />
+			<img src="./assets/img/icons/icons/lastfm-32x32.png" class="small" alt="Last.fm" />
 		</a>
 		<a href="http://www.formspring.me/batuhanicoz">
-			<img src="http://batuhanicoz.com/assets/images/icons/formspring-32x32.png" class="small" alt="Formspring" />
+			<img src="./assets/img/icons/icons/formspring-32x32.png" class="small" alt="Formspring" />
 		</a>
 		<a href="http://twitter.com/batuhanicoz" class="twitter-follow-button" data-show-count="false">Follow @batuhanicoz</a>
 		</p>
