--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -58,5 +58,17 @@
     <script src="assets/js/google-code-prettify/prettify.js"></script>
     <script src="assets/js/application.js"></script>
     <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+	<!-- Piwik --> 
+	<script type="text/javascript">
+	var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.batu.me/" : "http://stats.batu.me/");
+	document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+	</script><script type="text/javascript">
+	try {
+	var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 9);
+	piwikTracker.trackPageView();
+	piwikTracker.enableLinkTracking();
+	} catch( err ) {}
+	</script><noscript><p><img src="http://stats.batu.me/piwik.php?idsite=9" style="border:0" alt="" /></p></noscript>
+	<!-- End Piwik Tracking Code -->
   </body>
 </html>
