--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -12,8 +12,8 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="assets/css/bootstrap-1.1.1.css" rel="stylesheet">
-    <link href="assets/css/docs.css" rel="stylesheet">
+    <link href="assets/css/bootstrap-1.2.0.min.css" rel="stylesheet">
+    <!-- link href="assets/css/docs.css" rel="stylesheet" -->
     <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
 
     <!-- Le fav and touch icons -->
