little changes in been alive for thingy

--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -6,8 +6,9 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
         <h1>{{ hellotext }}, I'm Batuhan.</h1>
-        <p>I'm a {{ beenalivefor }}-day-old web developer, 
-        teen entrepreneur and a student. </p>
+        <p>I'm a web developer, 
+        an amateur entrepreneur and a student. I've been around for {{ beenalivefor }}.
+		</p>
         <p>
        	<a href="http://www.facebook.com/batuhanicoz">
     		<img src="./assets/img/icons/facebook-32x32.png" alt="Facebook" />
