--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}{% endblock %}Firat Batuhan Icoz</title>
-    <meta name="description" content="a shortcut to everything Batuhan">
-    <meta name="author" content="Batuhan Icoz">
+    <title>{% block title %}{% endblock %}Fırat Batuhan İçöz</title>
+    <meta name="description" content="A place you can find everthing about Fırat Batuhan İçöz and his work.">
+    <meta name="author" content="Fırat Batuhan İçöz">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -32,13 +32,13 @@
         <div class="container">
           <h3><a href="http://batu.me/1">Batuhan's</a></h3>
           <ul>
-            <li class="active"><a href="#masthead">Homepage</a></li>
-            <li><a href="http://batu.me/about">About</a></li>
+            <li class="active"><a href="http://{{ domain }}/">Homepage</a></li>
+            <li><a href="http://{{ domain }}/about">About</a></li>
             <li><a href="http://changelog.batu.me">Changelog</a></li>
             <li><a href="http://blog.batu.me">Blog</a></li>
             <li><a href="http://batu.me/projects">Projects</a></li>
             <li><a href="http://shareables.me">Shareables</a></li>
-            <li><a href="http://batu.me/contact">Contact</a></li>
+            <li><a href="http://{{ domain }}/contact">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -48,7 +48,7 @@
       
     <div class="container">
     	<footer>
-        	<p>&copy; 2011 Firat Batuhan Icoz</p>
+        	<p>&copy; 2011 Fırat Batuhan İçöz</p>
       	</footer>
     </div>
     
