--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-      <li class="active"><a href="http://{{ domain }}/">Homepage</a></li>
+      <li class="active"><a href="http://{{ app.bi_domain }}/">Homepage</a></li>
       <li><a href="http://{{ domain }}/about">About</a></li>
       <li><a href="http://changelog.batu.me">Changelog</a></li>
       <li><a href="http://blog.batu.me">Blog</a></li>
