translation variables fixed

--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -35,9 +35,9 @@
 		<a href="http://twitter.com/batuhanicoz" class="twitter-follow-button" data-show-count="false">Follow @batuhanicoz</a>
 		</p>
 		<p>
-			<a class="btn primary large">{{ app.translator.trans('homepage_l_about_me') }} &raquo;</a>
-			<a class="btn primary large">{{ app.translator.trans('homepage_l_my_projects') }} &raquo;</a>
-			<a class="btn primary large">{{ app.translator.trans('homepage_l_contact_me') }} &raquo;</a>
+			<a class="btn primary large">{{ app.translator.trans('l_about_me') }} &raquo;</a>
+			<a class="btn primary large">{{ app.translator.trans('l_my_projects') }} &raquo;</a>
+			<a class="btn primary large">{{ app.translator.trans('l_contact_me') }} &raquo;</a>
 		</p>
       </div>
 
