--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -39,6 +39,9 @@
 	      	<li><a href="http://shareables.me">Shareables</a></li>
 	      	<li><a href="http://{{ app.bi_domain }}/{{ app.translator.trans('route_contact') }}">{{ app.translator.trans('l_contact_me') }}</a></li>
           </ul>
+          <ul class="nav secondary-nav">
+			<li><a href=""><img src="http://{{ app.bi_domain }}/assets/img/flags/tr.png" /></a></li>
+		  </ul>
         </div>
       </div>
     </div>
