--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -40,7 +40,7 @@
 	      	<li><a href="http://{{ app.bi_domain }}/{{ app.translator.trans('route_contact') }}">{{ app.translator.trans('l_contact_me') }}</a></li>
           </ul>
           <ul class="nav secondary-nav">
-			<li><a href=""><img src="http://{{ app.bi_domain }}/assets/img/flags/tr.png" /></a></li>
+			<li></li>
 		  </ul>
         </div>
       </div>
@@ -52,6 +52,9 @@
     	<footer>
         	<p>&copy; 2011 Fırat Batuhan İçöz</p>
       	</footer>
+		<footer align="right">
+			<a href=""><img src="http://{{ app.bi_domain }}/assets/img/flags/tr.png" /></a>	
+		</footer>
     </div>
     
     <!-- Le javascript -->
