--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -50,10 +50,12 @@
       
     <div class="container">
     	<footer>
-        	<p>&copy; 2011 Fırat Batuhan İçöz</p>
-      	</footer>
-		<footer align="right">
-			<a href=""><img src="http://{{ app.bi_domain }}/assets/img/flags/tr.png" /></a>	
+        	<p>
+				&copy; 2011 Fırat Batuhan İçöz
+			</p>
+			<p align="right">
+				<a href=""><img src="http://{{ app.bi_domain }}/assets/img/flags/tr.png" /></a>	
+			</p>
 		</footer>
     </div>
     
