--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -52,9 +52,7 @@
     	<footer>
         	<p>
 				&copy; 2011 Fırat Batuhan İçöz
-			</p>
-			<p align="right">
-				<a href=""><img src="http://{{ app.bi_domain }}/assets/img/flags/tr.png" /></a>	
+				<span align="right"><a href=""><img src="http://{{ app.bi_domain }}/assets/img/flags/tr.png" /></a></span>
 			</p>
 		</footer>
     </div>
