--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -1,5 +1,7 @@
 {% extends "layout.html.twig" %}
 
+{% block title %}{{ app.translator.trans('about_title') }}{% endblock %}
+
 {% block content %}
     <div class="container">
 
