added a custom style

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -13,7 +13,7 @@
 
     <!-- Le styles -->
     <link href="assets/css/bootstrap-1.2.0.min.css" rel="stylesheet">
-    <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -39,7 +39,17 @@
 	      	<li><a href="http://shareables.me">Shareables</a></li>
 	      	<li><a href="http://{{ app.bi_domain }}/{{ app.translator.trans('route_contact') }}">{{ app.translator.trans('l_contact_me') }}</a></li>
           </ul>
+          <ul class="nav secondary-nav">
+			<li></li>
+		  </ul>
         </div>
+      </div>
+    </div>
+
+	<div class="container">
+		<div class="alert-message info">
+        <a class="close" href="#">&times;</a>
+        <p><strong>Merhaba!</strong> Bilgisayarınızı Türkçe kullandığınızı farkettim, sitemin Türkçe versiyonuna <a href="http://batuhanicoz.com.tr">buradan</a> ulaşabilirsiniz.</p>
       </div>
     </div>
 
