--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -47,10 +47,12 @@
     </div>
 
 	<div class="container">
+		<section id="language_alert">
 		<div class="alert-message info">
         <a class="close" href="#">&times;</a>
         <p><strong>Merhaba!</strong> Bilgisayarınızı Türkçe kullandığınızı farkettim, sitemin Türkçe versiyonuna <a href="http://batuhanicoz.com.tr">buradan</a> ulaşabilirsiniz.</p>
       </div>
+		</section>
     </div>
 
       {% block content %}{% endblock %}
