--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -45,6 +45,7 @@
         </div>
       </div>
     </div>
+	<div class="topbar_break"></div>
 
 	<div class="container">
 		<section id="language_alert">
