--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -49,10 +49,13 @@
 
 	<div class="container">
 		<section id="language_alert">
-		<div class="alert-message info">
-        <a class="close" href="#">&times;</a>
-        <p><strong>Merhaba!</strong> Bilgisayarınızı Türkçe kullandığınızı farkettim, sitemin Türkçe versiyonuna <a href="http://batuhanicoz.com.tr">buradan</a> ulaşabilirsiniz.</p>
-      </div>
+	      <div class="alert-message block-message info">
+	        <a class="close" href="#">&times;</a>
+	        <p>{% if app.bi_browser_lang === 'tr-TR' %}<strong>Merhaba!</strong> Tarayıcı dilinizin Türkçe olduğunu farkettim, bu sitenin Türkçe versiyonu de olduğunu hatırlatayım dedim.{% endif %}</p>
+	        <div class="alert-actions">
+	          <a class="btn small" href="#">{% if app.bi_browser_lang === 'tr-TR' %}Türkçe siteye git{% endif %}</a> <a class="btn small" href="#">Bu uyarıyı bir daha gösterme.</a>
+	        </div>
+	      </div>
 		</section>
     </div>
 
