fixed twig syntax again

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -51,7 +51,7 @@
 		<section id="language_alert">
 	      <div class="alert-message block-message info">
 	        <a class="close" href="#">&times;</a>
-	        <p>{% if app.bi_browser_lang == 'tr-TR' %}<strong>Merhaba!</strong> Tarayıcı dilinizin Türkçe olduğunu farkettim, bu sitenin Türkçe versiyonu de olduğunu hatırlatayım dedim.{% endif %}</p>
+	        <p>{% if app.bi_browser_lang == "tr-TR" %}<strong>Merhaba!</strong> Tarayıcı dilinizin Türkçe olduğunu farkettim, bu sitenin Türkçe versiyonu de olduğunu hatırlatayım dedim.{% endif %}</p>
 	        <div class="alert-actions">
 	          <a class="btn small" href="#">{% if app.bi_browser_lang === 'tr-TR' %}Türkçe siteye git{% endif %}</a> <a class="btn small" href="#">Bu uyarıyı bir daha gösterme.</a>
 	        </div>
