--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -53,7 +53,7 @@
 	        <a class="close" href="#">&times;</a>
 	        <p>{% if app.bi_browser_lang == "tr-TR" %}<strong>Merhaba!</strong> Tarayıcı dilinizin Türkçe olduğunu farkettim, bu sitenin Türkçe versiyonu de olduğunu hatırlatayım dedim.{% endif %}</p>
 	        <div class="alert-actions">
-	          <a class="btn small" href="#">{% if app.bi_browser_lang === 'tr-TR' %}Türkçe siteye git{% endif %}</a> <a class="btn small" href="#">Bu uyarıyı bir daha gösterme.</a>
+	          <a class="btn small" href="#">{% if app.bi_browser_lang == "tr-TR" %}Türkçe siteye git{% endif %}</a> <a class="btn small" href="#">Bu uyarıyı bir daha gösterme.</a>
 	        </div>
 	      </div>
 		</section>
