still, never mind.

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -52,10 +52,9 @@
 	<div class="container">
 		<section id="language_alert">
 	      <div class="alert-message block-message info">
-	        <a class="close" href="#">&times;</a>
-	        <p>{{ app.translator.trans('langwarning_text') }}</p>
+	        <p><strong>Merhaba!</strong> Tarayıcı dilinizin Türkçe olduğunu farkettim, bu sitenin Türkçe versiyonu de olduğunu hatırlatayım dedim.</p>
 	        <div class="alert-actions">
-	          <a class="btn small" href="http://batuhanicoz.com.tr/">{{ app.translator.trans('langwarning_button') }}</a> <a class="btn small" href="#">{{ app.translator.trans('langwarning_ignore') }}</a>
+	          <a class="btn small" href="http://batuhanicoz.com.tr/">Türkçe siteye git</a>
 	        </div>
 	      </div>
 		</section>
