--- a/views/contact.html.twig
+++ b/views/contact.html.twig
@@ -3,9 +3,7 @@
 {% block content %}
     <div class="container">
 
-
-
-<!-- Using Bootstrap w/ Less
+<!-- Contact
 ================================================== -->
 <section id="contact">
 <div class="page-header">
