--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -6,7 +6,8 @@
       <div class="hero-unit">
         <h1>{{ app.translator.trans('homepage_top_hello') }}</h1>
         <p>{{ app.translator.trans('homepage_tagline') }}</p>
- 		<p>I've been around for {{ beenalivefor }}.</p>
+ 		<p>{{ app.translator.trans('homepage_currently') }}</p> 
+		<!-- p>I've been around for {{ beenalivefor }}.</p -->
         <p>
        	<a href="http://www.facebook.com/batuhanicoz">
     		<img src="./assets/img/icons/facebook-32x32.png" alt="Facebook" />
