--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -52,7 +52,7 @@
 	<div class="container">
 		<section id="language_alert">
 	      <div class="alert-message block-message info">
-	        <p><strong>Merhaba!</strong> Tarayıcı dilinizin Türkçe olduğunu farkettim, bu sitenin Türkçe versiyonu de olduğunu hatırlatayım dedim.</p>
+	        <p><strong>Merhaba!</strong> Tarayıcı dilinizin Türkçe olduğunu farkettim, bu sitenin Türkçe versiyonu da olduğunu hatırlatayım dedim.</p>
 	        <div class="alert-actions">
 	          <a class="btn small" href="http://batuhanicoz.com.tr/">Türkçe siteye git</a>
 	        </div>
