--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -37,7 +37,7 @@
 		</p>
 		<p>
 			<a class="btn primary large">{{ app.translator.trans('l_about_me') }} &raquo;</a>
-			<a class="btn primary large">{{ app.translator.trans('l_my_projects') }} &raquo;</a>
+			<!-- a class="btn primary large">{{ app.translator.trans('l_my_projects') }} &raquo;</a -->
 			<a class="btn primary large">{{ app.translator.trans('l_contact_me') }} &raquo;</a>
 		</p>
       </div>
