--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -12,6 +12,13 @@
     <h1>About Me <small>Who am I, where I was born, how I grew up and so on.</small></h1>
   </div>
   <div class="row">
+    <div class="span16 columns">
+    <div class="alert-message warning">
+      <p><strong>WARNING!</strong> This page is un-finished and can't be used as reference.</p>
+    </div>
+	</div>
+  </div><!-- /row -->
+  <div class="row">
     <div class="span6 columns">
       <h3>A brief introduction</h3>
 	  <p>Hello, my name is Fırat Batuhan İçöz and I'm a web developer.</p>
@@ -37,7 +44,7 @@
   <div class="row">
 	<div class="span16 columns">
 	<h1></h1>
-	<h1>WARNING: THIS PAGE IS A DRAFT AND CAN'T BE USED AS REFERENCE.</h1>
+	<h1>WARNING: </h1>
 	<h1><a class="hoverZoomLink" style="font-weight: 300;" href="http://batu.me/wp-content/uploads/2011/01/30194_1461498257498_1234684607_31364564_2550044_n-3.jpg"><img class="alignleft size-thumbnail wp-image-108 hoverZoomLink" title="Batuhan Icoz" src="http://batu.me/wp-content/uploads/2011/01/30194_1461498257498_1234684607_31364564_2550044_n-3-150x150.jpg" alt="" width="150" height="150" /></a></h1>
 	Hi, my name is Fırat Batuhan İçöz.
 
@@ -46,7 +53,7 @@
 	As of August 1, I'm working as a web developer for an interactive media agency called <a href="http://16pixel.com">16pixel</a>[tr].
 
 	I'm studying on English language and English Literature at <a href="http://bursacumhuriyetlisesi.k12.tr/">Bursa Cumhuriyet Lisesi</a>[tr].
-	<h1>WARNING: THIS PAGE IS A DRAFT AND CAN'T BE USED AS REFERENCE.</h1>
+	
 	There some many things I can mention about me and I want to mention all of them. Dunno how, why or where to start though.
 
 	In sidebar, you can find my current job information, my full name, date of birth, links to my social accounts, <a href="http://twitter.com/batuhanicoz">my latest tweets</a>, my latest check-in's, my whereabouts and much more like those.
@@ -77,10 +84,10 @@
 	</ul>
 	</blockquote>
 	Fourth thing is programming. For now, I love programming (therefore I love my job). But I think, sometime in the future, I'll bored to do anything I've already done several times with several different languages. I've started to use <a href="http://php.net">PHP</a> and used it ever since. In time I've learned <a href="http://www.codeigniter.com">CodeIgniter</a> and FUEL Framework. In 2011, I've started to learn two other (and their most popular web frameworks) languages, Python (and <a href="https://www.djangoproject.com/">Django framework</a>), Ruby (and Rails framework). Time will come and I'll choose one and be expert of it, until then, I'm exploring languages (and their frameworks) other than PHP.
-	<h1>WARNING: THIS PAGE IS A DRAFT AND CAN'T BE USED AS REFERENCE.</h1>
+	
 	<h1><span style="color: #333333; font-weight: 300;">For those of you who wants to know everything (WHY?!1), I've got couple illness' I can mention. First is </span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemihypertrophy">hemihypertrophy</a><span style="color: #333333; font-weight: 300;"> and that means one side (left) of my body is bigger than the other side of it. Annoying but harmless. I also have skin tumors called "</span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemangioma">hemangioma</a><span style="color: #333333; font-weight: 300;">", again they're harmless but annoying, and it's only noticeable when I'm ill, angry or horny (WTF?!). When people asks what they are I just call them it's sun allergy and they buy it! I don't have any more diseases, I mean, hope not.</span></h1>
 	Since we started on my medical background, I think I can also mention here that sometimes I'm having sleep paralysis.
-	<h1>WARNING: THIS PAGE IS A DRAFT AND CAN'T BE USED AS REFERENCE.</h1>
+	
 	<h1><span style="color: #333333; font-weight: 300;">Now, what else is there, let me think, hmm, eureka! My goals</span></h1>
 	<ol>
 		<li>Have million dollars</li>
