--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -43,10 +43,8 @@
   </div><!-- /row -->
   <div class="row">
 	<div class="span16 columns">
-	<h1></h1>
-	<h1>WARNING: </h1>
-	<h1><a class="hoverZoomLink" style="font-weight: 300;" href="http://batu.me/wp-content/uploads/2011/01/30194_1461498257498_1234684607_31364564_2550044_n-3.jpg"><img class="alignleft size-thumbnail wp-image-108 hoverZoomLink" title="Batuhan Icoz" src="http://batu.me/wp-content/uploads/2011/01/30194_1461498257498_1234684607_31364564_2550044_n-3-150x150.jpg" alt="" width="150" height="150" /></a></h1>
-	Hi, my name is Fırat Batuhan İçöz.
+
+	<h1>
 
 	I’m a 17-year-old Turkish web developer, amateur entrepreneur, and high school junior.
 
@@ -85,11 +83,11 @@
 	</blockquote>
 	Fourth thing is programming. For now, I love programming (therefore I love my job). But I think, sometime in the future, I'll bored to do anything I've already done several times with several different languages. I've started to use <a href="http://php.net">PHP</a> and used it ever since. In time I've learned <a href="http://www.codeigniter.com">CodeIgniter</a> and FUEL Framework. In 2011, I've started to learn two other (and their most popular web frameworks) languages, Python (and <a href="https://www.djangoproject.com/">Django framework</a>), Ruby (and Rails framework). Time will come and I'll choose one and be expert of it, until then, I'm exploring languages (and their frameworks) other than PHP.
 	
-	<h1><span style="color: #333333; font-weight: 300;">For those of you who wants to know everything (WHY?!1), I've got couple illness' I can mention. First is </span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemihypertrophy">hemihypertrophy</a><span style="color: #333333; font-weight: 300;"> and that means one side (left) of my body is bigger than the other side of it. Annoying but harmless. I also have skin tumors called "</span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemangioma">hemangioma</a><span style="color: #333333; font-weight: 300;">", again they're harmless but annoying, and it's only noticeable when I'm ill, angry or horny (WTF?!). When people asks what they are I just call them it's sun allergy and they buy it! I don't have any more diseases, I mean, hope not.</span></h1>
+	<span style="color: #333333; font-weight: 300;">For those of you who wants to know everything (WHY?!1), I've got couple illness' I can mention. First is </span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemihypertrophy">hemihypertrophy</a><span style="color: #333333; font-weight: 300;"> and that means one side (left) of my body is bigger than the other side of it. Annoying but harmless. I also have skin tumors called "</span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemangioma">hemangioma</a><span style="color: #333333; font-weight: 300;">", again they're harmless but annoying, and it's only noticeable when I'm ill, angry or horny (WTF?!). When people asks what they are I just call them it's sun allergy and they buy it! I don't have any more diseases, I mean, hope not.</span>
 	Since we started on my medical background, I think I can also mention here that sometimes I'm having sleep paralysis.
 	
 	<h1><span style="color: #333333; font-weight: 300;">Now, what else is there, let me think, hmm, eureka! My goals</span></h1>
-	<ol>
+	<ul>
 		<li>Have million dollars</li>
 		<li><a href="http://www.43things.com/things/view/3160914/give-a-ted-talk-and-inspire-millions">Give a TED speech and inspire millions.</a></li>
 		<li>Move to UK or US</li>
@@ -98,10 +96,10 @@
 		<li>Make love in Paris. (I was gonna do that, my ex-girlfriend and I agreed and then she left me. *sad face goes here*)</li>
 		<li>Buy a car</li>
 		<li>Buy a house</li>
-	</ol>
+	</ul>
 	You can find more @ <a href="http://www.43things.com/person/Batuhan_Icoz">my 43things account</a>.
 	<h2>Some facts about me</h2>
-	<ol>
+	<ul>
 		<li>I don’t believe in any religion, I’m Agnostic.</li>
 		<li>I love Sci-Fi books, shows and movies more than any other kind.</li>
 		<li>I'm bisexual, but all people I ever loved was female.</li>
@@ -120,16 +118,13 @@
 		<li>I can’t read analog watches.</li>
 		<li>I found my best ideas while having sex.</li>
 		<li>I'm better than you.</li>
-	</ol>
+	</ul>
 	That’s enough facts for you.
 
 	<address>Now you know it all, happy?</address><address>All is not enough? Want to know anything else? Just <a href="http://batu.me/contact/">contact me</a>.</address>
-	<h1>WARNING: THIS PAGE IS A DRAFT AND THEREFORE IT'S A MESS AND IT'S INCOMPLETE.</h1>
 	</div>
   </div>
 </section>
-
-
 
     </div> <!-- /container -->
 
