--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container">
 
-<!-- About Bootstrap
+<!-- About Batuhan Icoz
 ================================================== -->
 <section id="about">
   <div class="page-header">
@@ -44,8 +44,6 @@
   <div class="row">
 	<div class="span16 columns">
 
-	<h1>
-
 	I’m a 17-year-old Turkish web developer, amateur entrepreneur, and high school junior.
 
 	As of August 1, I'm working as a web developer for an interactive media agency called <a href="http://16pixel.com">16pixel</a>[tr].
@@ -58,19 +56,6 @@
 
 	I think I can list some stuff here. I'll do that.
 
-	<strong>Some silly information about my past:</strong>
-	<ul>
-		<li>I was born on July 21, 1995 at <a href="http://maps.google.com/maps/place?cid=967334580752084145&amp;q=KONUR+CERRAH%C4%B0+TIP+MERKEZ%C4%B0,+Osmangazi,+Z%C3%BCbeyde+Han%C4%B1m+Caddesi,+Bursa,+Turkey&amp;hl=en&amp;ved=0CCcQ-gswAA&amp;sa=X&amp;ei=2I4-Tuv8BM-C_QaiqsH5DA&amp;sig2=FOmedKlpY6sdmDTEMqFUCw">Bursa Konur Hospital</a>, Bursa, Turkey.</li>
-		<li>I didn't have any real friends until I was like 12, so I grew as an asocial human being.</li>
-		<li>I don't actually remember the model of my first computer but I remember it run <a href="http://en.wikipedia.org/wiki/MS-DOS">DOS</a>. (which is stupid, given that we are talking about 8-9 years ago and back then people already were using graphical interfaces.)</li>
-		<li>I've opened my first website when I was 12. (no, when I mentioned I've had my first real friends when I was 12, I didn't mean from Internet, I was talking about IRL friends)</li>
-		<li>First lesson I've ever failed, ironically, was English. (a year from that, I've become getting 100/100 points from exams, became top of my class.)</li>
-		<li>I was raised as a free soul. My parents (by parents I mean my mom) always told me that I can say no, I'm free and can choose anything. She is a wise women.</li>
-		<li>My parents (both of them) never kept anything from me. I always knew when our company was not making enough profit, or when we had debts. May seem like bad thing a child to know, but it's not. I knew exactly when is good to ask for new stuff, and when not.</li>
-		<li>My first laptop was a second-hand Toshiba, my first brand-new laptop was an HP. Both running Windows XP.</li>
-		<li>My first Mac was an <a href="http://www.apple.com/imac">iMac</a>, and I've only paid it 600TL. (400 USD, or something like that.) (now, this one is a long story, you can read it in Turkish, click here.)</li>
-		<li>I didn't enjoy my first time. WORST. EVER.  (yes, I'm talking about the first time I've ever had sex.) (guess what, wasn't entirely my fault!)</li>
-	</ul>
 	I love 4 things more than anything, first is, well, guess what, it's sex. Other than that, reading books. I know, I know, what a cliché... But, I do, and can explain why. When I'm watching a movie, I'm limited. I'm limited to effect team's budget, I'm limited to directors imagination etc. But when I read, I'm only limited to my imagination and, that's my friend, is good as endless.
 
 	Third thing I love is watching TV series. I love them more than movies (less than books). And I think that's because I like their continuity. I've got couple favorites, first one is <a href="http://en.wikipedia.org/wiki/Doctor_Who">Doctor Who</a>. THE BEST FREAKING SHOW EVER TELEVISED. Here is a list of the shows I recommend you to watch: <a href="http://en.wikipedia.org/wiki/Torchwood">Torchwood</a>, True Blood, X-Files, Chuck, Arrested Development, The IT Crowd, House M.D., The Big Bang Theory, How I Met Your Mother, Stargate (especially SG-1), Supernatural, Skins UK, Misfits, Suits, White Collar, Being Human, Lie to me, Primeval. (I've watched literally more than hundred shows, can't remember all, some doesn't worth remembering though.)
@@ -86,20 +71,15 @@
 	<span style="color: #333333; font-weight: 300;">For those of you who wants to know everything (WHY?!1), I've got couple illness' I can mention. First is </span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemihypertrophy">hemihypertrophy</a><span style="color: #333333; font-weight: 300;"> and that means one side (left) of my body is bigger than the other side of it. Annoying but harmless. I also have skin tumors called "</span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemangioma">hemangioma</a><span style="color: #333333; font-weight: 300;">", again they're harmless but annoying, and it's only noticeable when I'm ill, angry or horny (WTF?!). When people asks what they are I just call them it's sun allergy and they buy it! I don't have any more diseases, I mean, hope not.</span>
 	Since we started on my medical background, I think I can also mention here that sometimes I'm having sleep paralysis.
 	
-	<h1><span style="color: #333333; font-weight: 300;">Now, what else is there, let me think, hmm, eureka! My goals</span></h1>
-	<ul>
-		<li>Have million dollars</li>
-		<li><a href="http://www.43things.com/things/view/3160914/give-a-ted-talk-and-inspire-millions">Give a TED speech and inspire millions.</a></li>
-		<li>Move to UK or US</li>
-		<li>Learn French</li>
-		<li>Learn node.js (and use it in a project)</li>
-		<li>Make love in Paris. (I was gonna do that, my ex-girlfriend and I agreed and then she left me. *sad face goes here*)</li>
-		<li>Buy a car</li>
-		<li>Buy a house</li>
-	</ul>
+	<h3><span style="color: #333333; font-weight: 300;">Now, what else is there, let me think, hmm, eureka! My goals</span></h3>
+
 	You can find more @ <a href="http://www.43things.com/person/Batuhan_Icoz">my 43things account</a>.
-	<h2>Some facts about me</h2>
-	<ul>
+
+	<h2>Lists</h2>
+  <div class="row">
+    <div class="span4 columns">
+      <h4>Facts</h4>
+      <ul>
 		<li>I don’t believe in any religion, I’m Agnostic.</li>
 		<li>I love Sci-Fi books, shows and movies more than any other kind.</li>
 		<li>I'm bisexual, but all people I ever loved was female.</li>
@@ -118,7 +98,49 @@
 		<li>I can’t read analog watches.</li>
 		<li>I found my best ideas while having sex.</li>
 		<li>I'm better than you.</li>
-	</ul>
+      </ul>
+    </div>
+    <div class="span4 columns">
+      <h4>Silly informations from past</h4>
+      <ul>
+		<li>I was born on July 21, 1995 at <a href="http://maps.google.com/maps/place?cid=967334580752084145&amp;q=KONUR+CERRAH%C4%B0+TIP+MERKEZ%C4%B0,+Osmangazi,+Z%C3%BCbeyde+Han%C4%B1m+Caddesi,+Bursa,+Turkey&amp;hl=en&amp;ved=0CCcQ-gswAA&amp;sa=X&amp;ei=2I4-Tuv8BM-C_QaiqsH5DA&amp;sig2=FOmedKlpY6sdmDTEMqFUCw">Bursa Konur Hospital</a>, Bursa, Turkey.</li>
+		<li>I didn't have any real friends until I was like 12, so I grew as an asocial human being.</li>
+		<li>I don't actually remember the model of my first computer but I remember it run <a href="http://en.wikipedia.org/wiki/MS-DOS">DOS</a>. (which is stupid, given that we are talking about 8-9 years ago and back then people already were using graphical interfaces.)</li>
+		<li>I've opened my first website when I was 12. (no, when I mentioned I've had my first real friends when I was 12, I didn't mean from Internet, I was talking about IRL friends)</li>
+		<li>First lesson I've ever failed, ironically, was English. (a year from that, I've become getting 100/100 points from exams, became top of my class.)</li>
+		<li>I was raised as a free soul. My parents (by parents I mean my mom) always told me that I can say no, I'm free and can choose anything. She is a wise women.</li>
+		<li>My parents (both of them) never kept anything from me. I always knew when our company was not making enough profit, or when we had debts. May seem like bad thing a child to know, but it's not. I knew exactly when is good to ask for new stuff, and when not.</li>
+		<li>My first laptop was a second-hand Toshiba, my first brand-new laptop was an HP. Both running Windows XP.</li>
+		<li>My first Mac was an <a href="http://www.apple.com/imac">iMac</a>, and I've only paid it 600TL. (400 USD, or something like that.) (now, this one is a long story, you can read it in Turkish, click here.)</li>
+		<li>I didn't enjoy my first time. WORST. EVER.  (yes, I'm talking about the first time I've ever had sex.) (guess what, wasn't entirely my fault!)</li>
+      </ul>
+    </div>
+    <div class="span4 columns">
+      <h4>Goals <code>&lt;ol&gt;</code></h4>
+      <ol>
+		<li>Have million dollars</li>
+		<li><a href="http://www.43things.com/things/view/3160914/give-a-ted-talk-and-inspire-millions">Give a TED speech and inspire millions.</a></li>
+		<li>Move to UK or US</li>
+		<li>Learn French</li>
+		<li>Learn node.js (and use it in a project)</li>
+		<li>Make love in Paris. (I was gonna do that, my ex-girlfriend and I agreed and then she left me. *sad face goes here*)</li>
+		<li>Buy a car</li>
+		<li>Buy a house</li>
+      </ol>
+    </div>
+    <div class="span4 columns">
+      <h4>Description <code>dl</code></h4>
+      <dl>
+        <dt>Description lists</dt>
+        <dd>A description list is perfect for defining terms.</dd>
+        <dt>Euismod</dt>
+        <dd>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</dd>
+        <dd>Donec id elit non mi porta gravida at eget metus.</dd>
+        <dt>Malesuada porta</dt>
+        <dd>Etiam porta sem malesuada magna mollis euismod.</dd>
+      </dl>
+    </div>
+  </div><!-- /row -->
 	That’s enough facts for you.
 
 	<address>Now you know it all, happy?</address><address>All is not enough? Want to know anything else? Just <a href="http://batu.me/contact/">contact me</a>.</address>
