--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -76,9 +76,31 @@
 	You can find more @ <a href="http://www.43things.com/person/Batuhan_Icoz">my 43things account</a>.
 
 	<h2>Lists</h2>
+	<div class="row show-grid" title="One-third and two-thirds layout">
+		<div class="span-two-thirds column">
+			<ol>
+				<li>I was born on July 21, 1995 at <a href="http://maps.google.com/maps/place?cid=967334580752084145&amp;q=KONUR+CERRAH%C4%B0+TIP+MERKEZ%C4%B0,+Osmangazi,+Z%C3%BCbeyde+Han%C4%B1m+Caddesi,+Bursa,+Turkey&amp;hl=en&amp;ved=0CCcQ-gswAA&amp;sa=X&amp;ei=2I4-Tuv8BM-C_QaiqsH5DA&amp;sig2=FOmedKlpY6sdmDTEMqFUCw">Bursa Konur Hospital</a>, Bursa, Turkey.</li>
+			</ol>
+		</div>
+    	<div class="span-one-third column">
+			<h4>Goals</h4>
+      			<ol>
+					<li>Have million dollars</li>
+					<li><a href="http://www.43things.com/things/view/3160914/give-a-ted-talk-and-inspire-millions">Give a TED speech and inspire millions.</a></li>
+					<li>Move to UK or US</li>
+					<li>Learn French</li>
+					<li>Learn node.js (and use it in a project)</li>
+					<li>Make love in Paris. (I was gonna do that, my ex-girlfriend and I agreed and then she left me. *sad face goes here*)</li>
+					<li>Buy a car</li>
+					<li>Buy a house</li>
+      				</ol>
+			</div>
+  		</div><!-- /row -->
+
   <div class="row">
-    <div class="span4 columns">
-      <h4>Facts</h4>
+  <h4>Facts</h4>
+
+    <div class="span8 columns">
       <ul>
 		<li>I don’t believe in any religion, I’m Agnostic.</li>
 		<li>I love Sci-Fi books, shows and movies more than any other kind.</li>
@@ -100,10 +122,8 @@
 		<li>I'm better than you.</li>
       </ul>
     </div>
-    <div class="span4 columns">
-      <h4>Silly informations from past</h4>
+    <div class="span8 columns">
       <ul>
-		<li>I was born on July 21, 1995 at <a href="http://maps.google.com/maps/place?cid=967334580752084145&amp;q=KONUR+CERRAH%C4%B0+TIP+MERKEZ%C4%B0,+Osmangazi,+Z%C3%BCbeyde+Han%C4%B1m+Caddesi,+Bursa,+Turkey&amp;hl=en&amp;ved=0CCcQ-gswAA&amp;sa=X&amp;ei=2I4-Tuv8BM-C_QaiqsH5DA&amp;sig2=FOmedKlpY6sdmDTEMqFUCw">Bursa Konur Hospital</a>, Bursa, Turkey.</li>
 		<li>I didn't have any real friends until I was like 12, so I grew as an asocial human being.</li>
 		<li>I don't actually remember the model of my first computer but I remember it run <a href="http://en.wikipedia.org/wiki/MS-DOS">DOS</a>. (which is stupid, given that we are talking about 8-9 years ago and back then people already were using graphical interfaces.)</li>
 		<li>I've opened my first website when I was 12. (no, when I mentioned I've had my first real friends when I was 12, I didn't mean from Internet, I was talking about IRL friends)</li>
@@ -115,31 +135,7 @@
 		<li>I didn't enjoy my first time. WORST. EVER.  (yes, I'm talking about the first time I've ever had sex.) (guess what, wasn't entirely my fault!)</li>
       </ul>
     </div>
-    <div class="span4 columns">
-      <h4>Goals <code>&lt;ol&gt;</code></h4>
-      <ol>
-		<li>Have million dollars</li>
-		<li><a href="http://www.43things.com/things/view/3160914/give-a-ted-talk-and-inspire-millions">Give a TED speech and inspire millions.</a></li>
-		<li>Move to UK or US</li>
-		<li>Learn French</li>
-		<li>Learn node.js (and use it in a project)</li>
-		<li>Make love in Paris. (I was gonna do that, my ex-girlfriend and I agreed and then she left me. *sad face goes here*)</li>
-		<li>Buy a car</li>
-		<li>Buy a house</li>
-      </ol>
-    </div>
-    <div class="span4 columns">
-      <h4>Description <code>dl</code></h4>
-      <dl>
-        <dt>Description lists</dt>
-        <dd>A description list is perfect for defining terms.</dd>
-        <dt>Euismod</dt>
-        <dd>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</dd>
-        <dd>Donec id elit non mi porta gravida at eget metus.</dd>
-        <dt>Malesuada porta</dt>
-        <dd>Etiam porta sem malesuada magna mollis euismod.</dd>
-      </dl>
-    </div>
+
   </div><!-- /row -->
 	That’s enough facts for you.
 
